@startuml
skinparam shadowing false
skinparam defaultFontName xfonts-wqy
skinparam classFontSize 10
skinparam dpi 300

title __PROMPT's Class Diagram__\n

  namespace com.wxc.campuslife {
    namespace prompt {
      class com.wxc.campuslife.prompt.AlarmService {
          {static} - TAG : String
          + AlarmService()
          + onBind()
          + onStartCommand()
      }
    }
  }
  

  namespace com.wxc.campuslife {
    namespace prompt {
      class com.wxc.campuslife.prompt.PromptActivity {
          ~ day : int
          ~ detail : String
          ~ hour : int
          ~ min : int
          ~ month : int
          ~ title : String
          ~ year : int
          - RemindList : List<Remind>
          - gson : Gson
          # onCreate()
          # onResume()
          - initReminds()
          - parseJson()
          - showRemind()
          - showWeather()
          - toAdd()
      }
    }
  }
  

  namespace com.wxc.campuslife {
    namespace prompt {
      class com.wxc.campuslife.prompt.Remind {
          - eventDetail : String
          - eventName : String
          - eventTime : Date
          - isFin : int
          + Remind()
          + Remind()
          + getEventDetail()
          + getEventName()
          + getEventTime()
          + getIsFin()
      }
    }
  }
  

  namespace com.wxc.campuslife {
    namespace prompt {
      class com.wxc.campuslife.prompt.RemindAdapter {
          - mRemindList : List<Remind>
          + RemindAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          - remove()
      }
    }
  }
  

  namespace com.wxc.campuslife {
    namespace prompt {
      class com.wxc.campuslife.prompt.ViewHolder {
          ~ RemindName : CheckBox
          ~ RemindTime : TextView
          ~ RemindView : View
          + ViewHolder()
      }
    }
  }
  

  namespace com.wxc.campuslife {
    namespace prompt {
      class com.wxc.campuslife.prompt.RemindAllActivity {
          - RemindList : List<Remind>
          # onCreate()
      }
    }
  }
  

  namespace com.wxc.campuslife {
    namespace prompt {
      class com.wxc.campuslife.prompt.RemindAllAdapter {
          - mRemindList : List<Remind>
          + RemindAllAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          + showRemind()
          - refresh()
          - remove()
      }
    }
  }
  

'  namespace com.wxc.campuslife {
'    namespace prompt {
'      class com.wxc.campuslife.prompt.RemindAllAdapter.ViewHolder {
'          ~ RemindName : CheckBox
'          ~ RemindTime : TextView
'          ~ RemindView : View
'          + ViewHolder()
'      }
'    }
'  }
  

'  namespace com.wxc.campuslife {
'    namespace prompt {
'      class com.wxc.campuslife.prompt.WeatherInfo {
'          - code : String
'          - fxLink : String
'          + getCode()
'          + getFxLink()
'          + getNow()
'          + setCode()
'          + setFxLink()
'          + setNow()
'      }
'    }
'  }
'
'
'  namespace com.wxc.campuslife {
'    namespace prompt {
'      class com.wxc.campuslife.prompt.Now {
'          - feelsLike : String
'          - text : String
'          + getFeelsLik()
'          + getText()
'          + setFeelsLike()
'          + setText()
'      }
'    }
'  }
  

  com.wxc.campuslife.prompt.AlarmService -up-|> android.app.Service
'  com.wxc.campuslife.prompt.PromptActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.wxc.campuslife.prompt.RemindAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.wxc.campuslife.prompt.RemindAdapter o-- com.wxc.campuslife.utils.AlarmManagerUtils : alarmManagerUtils
  com.wxc.campuslife.prompt.RemindAdapter +-down- com.wxc.campuslife.prompt.ViewHolder
  com.wxc.campuslife.prompt.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
'  com.wxc.campuslife.prompt.RemindAllActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.wxc.campuslife.prompt.RemindAllAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.wxc.campuslife.prompt.RemindAllAdapter +-down- com.wxc.campuslife.prompt.ViewHolder
  com.wxc.campuslife.prompt.RemindAllAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
'  com.wxc.campuslife.prompt.WeatherInfo o-- com.wxc.campuslife.prompt.Now : now
'  com.wxc.campuslife.prompt.WeatherInfo +-down- com.wxc.campuslife.prompt.Now


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
